--- a/app/views/searchcases/pages/results.html
+++ b/app/views/searchcases/pages/results.html
@@ -64,7 +64,7 @@ Case details
             <!-- One result -->
                 <tbody class="govuk-table__body">
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Talha Awan<br><span style="font-size: 16px; color:#505a5f;">8771-7857-4127-5065</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Talha Awan<br><span style="font-size: 16px; color:#505a5f;">7495-7285-0685-8694</span></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case under review</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Manchester Tribunal Hearing Centre</td>
@@ -77,7 +77,7 @@ Case details
                 <tbody class="govuk-table__body">
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Talha Awan<br><span style="font-size: 16px; color:#505a5f;">7495-7285-0685-8694</span></td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case under review</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Manchester Tribunal Hearing Centre</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsiac">View</a></td>
@@ -262,7 +262,35 @@ Case details
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsiac?casereference=8524526526094223&">View</a></td>
                     </tr>
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Mohammed Groom<br><span style="font-size: 16px; color:#505a5f;">2980-8618-2050-0344</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Mohammed Groom<br><span style="font-size: 16px; color:#505a5f;">2980-8618-7671-0344</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Decided</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birmingham Civil and Family Justice Centre</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsiac?casereference=2980861820500344&">View</a></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Mohammed Jackson<br><span style="font-size: 16px; color:#505a5f;">2980-6371-4786-2587</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Decided</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birmingham Civil and Family Justice Centre</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsiac?casereference=2980861820500344&">View</a></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Mohammed Davis<br><span style="font-size: 16px; color:#505a5f;">2980-7637-4987-4259</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Decided</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birmingham Civil and Family Justice Centre</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsiac?casereference=2980861820500344&">View</a></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Mohammed Higham<br><span style="font-size: 16px; color:#505a5f;">2980-2649-7980-7872</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Decided</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birmingham Civil and Family Justice Centre</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsiac?casereference=2980861820500344&">View</a></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Mohammed Steadman<br><span style="font-size: 16px; color:#505a5f;">2980-6965-1943-5976</span></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Decided</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birmingham Civil and Family Justice Centre</td>
@@ -270,6 +298,29 @@ Case details
                     </tr>
                 </tbody>
             </table>
+
+
+                <nav class="hmcts-pagination" id="pagination-label">
+
+                    <p class="govuk-visually-hidden" aria-labelledby="pagination-label">Pagination navigation</p>
+
+                    <ul class="hmcts-pagination__list">
+
+                        <li class="hmcts-pagination__item  hmcts-pagination__item--prev">
+                            <a class="hmcts-pagination__link" style="color: #000;">Previous page</a>
+                        </li>
+
+                        <li class="hmcts-pagination__item hmcts-pagination__item--dots">&nbsp;&nbsp;&nbsp;</li>
+                        <li class="hmcts-pagination__item hmcts-pagination__item--dots">...</li>
+                        <li class="hmcts-pagination__item hmcts-pagination__item--dots">&nbsp;&nbsp;&nbsp;</li>
+
+                        <li class="hmcts-pagination__item  hmcts-pagination__item--next">
+                            <a class="hmcts-pagination__link" style="text-decoration: underline;" href="/searchcases/pages/resultspage2">Next page</a>
+                        </li>
+
+                    </ul>
+
+                </nav>
 
 
 
@@ -350,7 +401,7 @@ Case details
         {% elif  data.results == 'sscstask6'   %}
                 <tbody class="govuk-table__body">
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Joanna Burns<br><span style="font-size: 16px; color:#505a5f;">8771-7857-4127-5065</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Joanna Burns<br><span style="font-size: 16px; color:#505a5f;">9872-5748-6736-5860</span></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Appeal received</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Manchester Tribunal Hearing Centre</td>
@@ -380,9 +431,9 @@ Case details
                     </tr>
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lorenzo Hanoi<br><span style="font-size: 16px; color:#505a5f;">8574-1738-6038-5729</span></td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Family Public Law</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Appeal submitted</td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Manchester Tribunal Hearing Centre</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19"> East London Family Court</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/caseaccess/pages/IACs">Specific access</a></td>
                     </tr>
                     <tr class="govuk-table__row">
