fixes for case search testing

--- a/app/views/searchcases/pages/resultspage2.html
+++ b/app/views/searchcases/pages/resultspage2.html
@@ -262,7 +262,6 @@ Case details
 
 
                         <li class="hmcts-pagination__item hmcts-pagination__item--dots">&nbsp;&nbsp;&nbsp;</li>
-                        <li class="hmcts-pagination__item hmcts-pagination__item--dots">...</li>
                         <li class="hmcts-pagination__item hmcts-pagination__item--dots">&nbsp;&nbsp;&nbsp;</li>
 
 
@@ -281,34 +280,7 @@ Case details
 
         {% elif  data.results == 'sscstask4'   %}
                 <tbody class="govuk-table__body">
-                    <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Narran<br><span style="font-size: 16px; color:#505a5f;">7495-7285-0685-8694</span></td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Appeal received</td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Stevenage Magistrates' Court</td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
-                    </tr>
-                    <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Mohammed<br><span style="font-size: 16px; color:#505a5f;">3689-7338-6654-3525</span></td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Appeal received</td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Bexleyheath Social Security and Child Support Tribunal</td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
-                    </tr>
-                    <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Landers<br><span style="font-size: 16px; color:#505a5f;">2961-9965-1712-8009</span></td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Appeal received</td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Doncaster Justice Centre North</td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
-                    </tr>
-                    <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Schneller<br><span style="font-size: 16px; color:#505a5f;">9926-4195-0432-1167</span></td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Evidence received</td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Nottingham Magistrates' Court</td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
-                    </tr>
+
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Groom<br><span style="font-size: 16px; color:#505a5f;">2980-8618-2050-0344</span></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
@@ -344,11 +316,64 @@ Case details
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hatton Cross Tribunal Hearing Centre</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
                     </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Narran<br><span style="font-size: 16px; color:#505a5f;">7495-7285-0685-8694</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Appeal received</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Stevenage Magistrates' Court</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Mohammed<br><span style="font-size: 16px; color:#505a5f;">3689-7338-6654-3525</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Appeal received</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Bexleyheath Social Security and Child Support Tribunal</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Landers<br><span style="font-size: 16px; color:#505a5f;">2961-9965-1712-8009</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Appeal received</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Doncaster Justice Centre North</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Schneller<br><span style="font-size: 16px; color:#505a5f;">9926-4195-0432-1167</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Evidence received</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Nottingham Magistrates' Court</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
+                    </tr>
+
 
                 </tbody>
             </table>
 
 
+            <nav class="hmcts-pagination" id="pagination-label">
+
+                <p class="govuk-visually-hidden" aria-labelledby="pagination-label">Pagination navigation</p>
+
+                <ul class="hmcts-pagination__list">
+
+
+                    <li class="hmcts-pagination__item  hmcts-pagination__item--prev">
+                        <a class="hmcts-pagination__link" style="text-decoration: underline;" href="/searchcases/pages/results">Previous page</a>
+                    </li>
+
+
+                    <li class="hmcts-pagination__item hmcts-pagination__item--dots">&nbsp;&nbsp;&nbsp;</li>
+                    <li class="hmcts-pagination__item hmcts-pagination__item--dots">&nbsp;&nbsp;&nbsp;</li>
+
+
+                    <li class="hmcts-pagination__item  hmcts-pagination__item--next">
+                        <a class="hmcts-pagination__link" style="color: #000;">Next page</a>
+                    </li>
+
+
+                </ul>
+
+            </nav>
 
         {% endif %}
 
