--- a/app/views/searchcases/pages/results.html
+++ b/app/views/searchcases/pages/results.html
@@ -311,7 +311,6 @@ Case details
                         </li>
 
                         <li class="hmcts-pagination__item hmcts-pagination__item--dots">&nbsp;&nbsp;&nbsp;</li>
-                        <li class="hmcts-pagination__item hmcts-pagination__item--dots">...</li>
                         <li class="hmcts-pagination__item hmcts-pagination__item--dots">&nbsp;&nbsp;&nbsp;</li>
 
                         <li class="hmcts-pagination__item  hmcts-pagination__item--next">
@@ -392,8 +391,145 @@ Case details
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
                     </tr>
 
+
+
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Smith<br><span style="font-size: 16px; color:#505a5f;">8524-5265-7632-4783</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Appeal received</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hatton Cross Tribunal Hearing Centre</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Scott<br><span style="font-size: 16px; color:#505a5f;">8524-5265-4578-2121</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hearing reminder</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Basildon Magistrates' Court and Family Court</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom King<br><span style="font-size: 16px; color:#505a5f;">8524-5265-4763-8773</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Appeal received</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Basildon Magistrates' Court and Family Court</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Brierly<br><span style="font-size: 16px; color:#505a5f;">8524-5265-7867-4678</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Supplementary response</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hatton Cross Tribunal Hearing Centre</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Hoyle<br><span style="font-size: 16px; color:#505a5f;">8524-5265-3867-8964</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hearing reminder</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hatton Cross Tribunal Hearing Centre</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Jones<br><span style="font-size: 16px; color:#505a5f;">8524-5265-9891-4753</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hearing reminder</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Nottingham Magistrates' Court</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Khan<br><span style="font-size: 16px; color:#505a5f;">8524-5265-1977-3873</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Supplementary response</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Nottingham Magistrates' Court</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Williams<br><span style="font-size: 16px; color:#505a5f;">8524-5265-7733-3476</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Appeal received</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birmingham Civil and Family Justice Centre</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Patel<br><span style="font-size: 16px; color:#505a5f;">8524-5265-4454-4653</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Appeal received</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hatton Cross Tribunal Hearing Centre</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Westman<br><span style="font-size: 16px; color:#505a5f;">8524-5265-4534-4533</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Supplementary response</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hatton Cross Tribunal Hearing Centre</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Booth<br><span style="font-size: 16px; color:#505a5f;">8524-5265-7496-4653</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Appeal received</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hatton Cross Tribunal Hearing Centre</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Chopra<br><span style="font-size: 16px; color:#505a5f;">8524-5265-4376-4398</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hearing reminder</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Stevenage Magistrates' Court</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Eel<br><span style="font-size: 16px; color:#505a5f;">8524-5265-4561-4653</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hearing reminder</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birmingham Civil and Family Justice Centre</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Brickhouse<br><span style="font-size: 16px; color:#505a5f;">8524-5265-4636-4651</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Supplementary response</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Stevenage Magistrates' Court</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Brewer<br><span style="font-size: 16px; color:#505a5f;">8524-5265-4634-4534</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Appeal received</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hatton Cross Tribunal Hearing Centre</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Davis<br><span style="font-size: 16px; color:#505a5f;">8524-5265-4563-4533</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hearing reminder</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birmingham Civil and Family Justice Centre</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
+                    </tr>
+
                 </tbody>
             </table>
+
+
+                <nav class="hmcts-pagination" id="pagination-label">
+
+                    <p class="govuk-visually-hidden" aria-labelledby="pagination-label">Pagination navigation</p>
+
+                    <ul class="hmcts-pagination__list">
+
+                        <li class="hmcts-pagination__item  hmcts-pagination__item--prev">
+                            <a class="hmcts-pagination__link" style="color: #000;">Previous page</a>
+                        </li>
+
+                        <li class="hmcts-pagination__item hmcts-pagination__item--dots">&nbsp;&nbsp;&nbsp;</li>
+                        <li class="hmcts-pagination__item hmcts-pagination__item--dots">&nbsp;&nbsp;&nbsp;</li>
+
+                        <li class="hmcts-pagination__item  hmcts-pagination__item--next">
+                            <a class="hmcts-pagination__link" style="text-decoration: underline;" href="/searchcases/pages/resultspage2">Next page</a>
+                        </li>
+
+                    </ul>
+
+                </nav>
 
 
 
