--- a/app/views/searchcases/pages/toomanyresults.html
+++ b/app/views/searchcases/pages/toomanyresults.html
@@ -22,7 +22,7 @@ Case details
     <p>Your search has returned too many results to display.</p>
 
 <form
-    action="search.html"
+    action="/searchcases/pages/search.html"
     name="aspnetForm"
     method="post"
     id="aspnetForm"
