fix to case search for just first name entry

--- a/app/views/searchcases/pages/toomanyresults.html
+++ b/app/views/searchcases/pages/toomanyresults.html
@@ -22,9 +22,9 @@ Case details
     <p>Your search has returned too many results to display.</p>
 
 <form
-    action="/searchcases/pages/search.html"
+    action="/searchcases/pages/search"
     name="aspnetForm"
-    method="post"
+    method="get"
     id="aspnetForm"
     autocomplete="off"
     >
