--- a/app/views/workallocation/pages/wa-PA-00467-2017-ajh.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-ajh.html
@@ -31,7 +31,7 @@ Case details
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="wa-PA-00467-2017-ajha">
             <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-              Allocate to another judge
+              Allocate to another person
             </label>
           </div>
         </div>
