--- a/app/views/workallocation/pages/wa-PA-00467-2017-arj-o.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-arj-o.html
@@ -119,13 +119,13 @@ Case details
             </tr>
 
             <tr class="govuk-table__row">
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Nordman</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hearing judge</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                <td class="govuk-table__cell"><a href="wa-PA-00467-2017-arj" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Judge Nordman</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Hearing judge</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Standard access</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Taylor House</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">DD/MM/YYYY </td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"></td>
+                <td class="govuk-table__cell" style="border-bottom: 1px solid #fff"><a href="wa-PA-00467-2017-arj" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
             </tr>
 
             <tr class="govuk-table__row">
