--- a/app/views/workallocation/pages/wa-PA-00467-2017-arjra.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-arjra.html
@@ -11,7 +11,7 @@ Case details
 {% block content %}
 <span class="govuk-caption-l">Hearing judge</span>
 <h2 class="govuk-heading-l">Remove allocation</h2>
-<p class="govuk-body">This will remove the role from the current user.</p>
+<p class="govuk-body">This will remove the role allocation. You may need to unassign or reassign associated tasks too.</p>
 
 <div class="govuk-form-group">
   <h3 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="event-name">
