--- a/app/views/workallocation/pages/wa-PA-00467-2017-real-chk.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-real-chk.html
@@ -18,7 +18,7 @@ Case details
     </label>
   </h2>
   <div id="event-name-hint" class="govuk-hint">
-    Check you are reassigning to the right person.
+    This will reallocate the role to the person below. You may need reassign associated tasks too.
   </div>
 
 </div>
@@ -50,7 +50,7 @@ Case details
 </table>
   <div class="govuk-button-group">
   {{ govukButton({
-    text: "Reallocate",
+    text: "Confirm allocation",
     href: "wa-PA-00467-2017-arj-re",
     classes: "govuk-!-margin-right-3"
   }) }}
