--- a/app/views/workallocation/pages/lms.html
+++ b/app/views/workallocation/pages/lms.html
@@ -34,6 +34,7 @@ My work
               <th scope="col" class="govuk-table__header" aria-sort="none"><button type="button" data-index="1">Location</button></th>
               <th scope="col" class="govuk-table__header" aria-sort="none"><button type="button" data-index="1">Task</button></th>
               <th scope="col" class="govuk-table__header" aria-sort="none"><button type="button" data-index="1">Date</button></th>
+              <th scope="col" class="govuk-table__header" aria-sort="none"><button type="button" data-index="1">Person</button></th>
             </tr>
           </thead>
           <tbody>
@@ -43,10 +44,12 @@ My work
               <td data-label="Reference">Protection</td>
               <td data-label="Status">Taylor House</td>
               <td data-label="Date">Review respondent evidence</td>
+
                 <td data-label="Amount">{{govukTag({
       text: "dd/mm/yyyy",
       classes: "govuk-tag--red"
       })}} </td>
+      <td data-label="Date">Judge Beech</td>
             </tr>
           </tbody>
         </table>
