--- a/app/views/workallocation/pages/wa-PA-00467-2017-ajchk.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-ajchk.html
@@ -12,7 +12,7 @@ Case details
 {% endblock %}
 {% block content %}
 <h2 class="govuk-heading-l">Allocate a judicial role</h2>
-<h2 class="govuk-heading-m">Personal details</h2>
+<h2 class="govuk-heading-m">Check your allocation</h2>
 <div id="event-name-hint" class="govuk-hint">
   Check the information below carefully.
 </div>
@@ -46,7 +46,7 @@ Case details
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Selected judge
+              Person
             </dt>
             <dd class="govuk-summary-list__value">
               <p class="govuk-body">Judge Nordman</p>
