--- a/app/views/workallocation/pages/wa-PA-00467-2017-ajha.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-ajha.html
@@ -16,11 +16,11 @@ Case details
 
 <div class="govuk-form-group">
   <h2 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="event-name">
-      Find the judge
+      Find the person
     </label>
   </h2>
   <div id="event-name-hint" class="govuk-hint">
-    Type the name of the judge to select the right person.
+    Type the name of the person and select them.
   </div>
   <input class="govuk-input govuk-!-width-one-third" id="event-name" name="event-name" type="text" aria-describedby="event-name-hint">
 </div>
