--- a/app/views/workallocation/pages/wa-PA-00467-2017-arjra-de.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-arjra-de.html
@@ -17,7 +17,7 @@ Case details
   </svg>
   <div class="hmcts-banner__message">
     <span class="hmcts-banner__assistive">Success</span>
-    You've removed a role allocation.
+    You've removed a role allocation. You may need to unassign or reassign associated tasks too.
   </div>
 </div>
 <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
