--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -9,7 +9,7 @@ GOV.UK Prototype Kit
       Work allocation prototype
     </h1>
     <h2 class="govuk-heading-l">
-      Last updated (1/4/20) <br><br>SUBJECT TO CHANGE - ERROR STATES TO BE ADDED
+      Last updated (6/4/20) <br><br>SUBJECT TO CHANGE - ERROR STATES TO BE ADDED
     </h2>
     <div style="display: flex; margin-top: 80px;">
 
@@ -138,13 +138,50 @@ GOV.UK Prototype Kit
   <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-re-v?usertype=judiciary&">My access - tab - rejected - viewed</a><br>Checked with DS - v3.1.1</p>
   <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-c?usertype=judiciary&">My access - tab - New case alert - Challenged</a><br>Checked with DS - v3.1.1</p>
   <p><a target="_blank" href="/workallocation/pages/wa-2018?usertype=judiciary&">My access - tab - case details- Challenged</a><br>Checked with DS - v3.1.1</p>
-    <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-c-v?usertype=judiciary&">My access - tab - Challenged - viewed</a><br>Checked with DS - v3.1.1</p>
-    <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-s?usertype=judiciary&">My access - tab - New case alert - Specific</a><br>Checked with DS - v3.1.1</p>
-    <p><a target="_blank" href="/workallocation/pages/wa-2017?usertype=judiciary&">My access - tab - case details- Specific</a><br>Checked with DS - v3.1.1</p>
-      <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-s-v?usertype=judiciary&">My access - tab - Specific - viewed</a><br>Checked with DS - v3.1.1</p>
-        <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-assv?usertype=judiciary&">My access - tab - Assorted type - viewed</a><br>Checked with DS - v3.1.1</p>
-      </div>
+  <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-c-v?usertype=judiciary&">My access - tab - Challenged - viewed</a><br>Checked with DS - v3.1.1</p>
+  <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-s?usertype=judiciary&">My access - tab - New case alert - Specific</a><br>Checked with DS - v3.1.1</p>
+  <p><a target="_blank" href="/workallocation/pages/wa-2017?usertype=judiciary&">My access - tab - case details- Specific</a><br>Checked with DS - v3.1.1</p>
+  <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-s-v?usertype=judiciary&">My access - tab - Specific - viewed</a><br>Checked with DS - v3.1.1</p>
+  <p><a target="_blank" href="/workallocation/pages/wa-myaccess-new-assv?usertype=judiciary&">My access - tab - Assorted type - viewed</a><br>Checked with DS - v3.1.1</p>
 
+  <p class="govuk-body govuk-!-margin-bottom-9"></p>
+
+
+  <h2 class="govuk-heading-xl">All Work</h2>
+  <h2 class="govuk-heading-m">View tasks not yet assigned</h2>
+  <div class="xui-alert-link__number">1 </div>
+  <div class="govuk-!-padding-bottom-6"></div>
+  <p><a target="_blank" href="/workallocation/pages/wa-allwork?usertype=judiciary&">All work - tab - Tasks All</a><br>Checked with v3.2</p>
+  <p><a target="_blank" href="/workallocation/pages/wa-allwork-none?usertype=judiciary&">All work - tab - Tasks none assigned</a><br>Checked with v3.2</p>
+
+  <h2 class="govuk-heading-m">View all tasks assigned to Judge Beech</h2>
+  <div class="xui-alert-link__number">2 </div>
+  <div class="govuk-!-padding-bottom-6"></div>
+  <p><a target="_blank" href="/workallocation/pages/wa-allwork-sp?usertype=judiciary&">All work - tab - Tasks - Judge Beech</a><br>Checked with v3.2</p>
+  <p><a target="_blank" href="/workallocation/pages/wa-allwork-sp-y?usertype=judiciary&">All work - tab - Tasks - Judge Beech - Priority yellow</a><br>Checked with v3.2</p>
+
+
+  <h2 class="govuk-heading-m">Reassign tasks from Judge Beech to Judge Birch</h2>
+  <div class="xui-alert-link__number">3 </div>
+  <div class="govuk-!-padding-bottom-6"></div>
+
+  <h2 class="govuk-heading-m">View all cases with judicial allocations</h2>
+  <div class="xui-alert-link__number">4 </div>
+  <div class="govuk-!-padding-bottom-6"></div>
+  <p><a target="_blank" href="/workallocation/pages/wa-allwork-cases?usertype=judiciary&">All work - tab - Cases - Judicial</a><br>Checked with v3.2</p>
+
+
+
+  <h2 class="govuk-heading-m">View all cases for Judge Beech</h2>
+  <div class="xui-alert-link__number">5 </div>
+  <div class="govuk-!-padding-bottom-6"></div>
+
+
+  <h2 class="govuk-heading-m">Judge Beech reports she has too many lead judge cases ...</h2>
+  <div class="xui-alert-link__number">6 </div>
+  <div class="govuk-!-padding-bottom-6"></div>
+
+  </div>
 
   <div style="width: 800px;">
 
