--- a/app/views/workallocation/layoutjudicial-c.html
+++ b/app/views/workallocation/layoutjudicial-c.html
@@ -83,7 +83,7 @@
                                     </li>
 
                                     <li class="hmcts-primary-navigation__item">
-                                        <a class="hmcts-primary-navigation__link" href="#">
+                                        <a class="hmcts-primary-navigation__link" href="/workallocation/pages/wa-allwork">
                                             All work
                                         </a>
                                     </li>
