--- a/app/views/workallocation/layoutstaff-c.html
+++ b/app/views/workallocation/layoutstaff-c.html
@@ -51,7 +51,7 @@
         <div style="width:1220px; display: flex; margin: 0 auto;">
 
             <div style="width: 406px; ">
-                <a style="color: white; font-size: 24px; font-weight: bold; text-decoration: none;" href="/caseaccess">Manage Cases</a>
+                <a style="color: white; font-size: 24px; font-weight: bold; text-decoration: none;" href="/workallocation">Manage Cases</a>
             </div>
 
             <div class="hmcts-header__container" style="width: 812px;">
@@ -100,12 +100,12 @@
                             </a>
                         </li>
                         <li class="hmcts-primary-navigation__item">
-                            <a class="hmcts-primary-navigation__link" href="#">
+                            <a class="hmcts-primary-navigation__link" href="/workallocation/pages/wa-allwork">
                                 All work
                             </a>
                         </li>
                         <li class="hmcts-primary-navigation__item">
-                            <a class="hmcts-primary-navigation__link" href="/workallocation/pages/search">
+                            <a class="hmcts-primary-navigation__link" href="/workallocation/pages/search-c">
                                 Search cases
                             </a>
                         </li>
