update to global width

--- a/app/views/workallocation/pages/wa-app-confirmation.html
+++ b/app/views/workallocation/pages/wa-app-confirmation.html
@@ -1,7 +1,7 @@
 {% if  data.usertype == 'judiciary'   %}
-{% extends "../layoutjudicial-c.html" %}
+{% extends "../layoutjudicial.html" %}
 {% else %}
-{% extends "../layoutstaff-c.html" %}
+{% extends "../layoutstaff.html" %}
 {% endif %}
 {% block pageTitle %}
 Case details
