--- a/app/views/workallocation/pages/wa-mytasks.html
+++ b/app/views/workallocation/pages/wa-mytasks.html
@@ -7,6 +7,11 @@
 My work
 {% endblock %}
 {% block content %}
+<style>
+  .govuk-width-container {
+    max-width: 1820px;
+  }
+</style>
 <div class="hmcts-page-heading">
   <div class="hmcts-page-heading__title">
     <h1 class="govuk-heading-xl">My work</h1>
