--- a/app/views/workallocation/layoutstaff.html
+++ b/app/views/workallocation/layoutstaff.html
@@ -42,23 +42,24 @@
 
 {% block header %}
   {% include "includes/cookie-banner.html" %}
-
+  <style>
+    .govuk-width-container {
+      max-width: 1820px;
+    }
+  </style>
 
 
 
     <header class="hmcts-header" role="banner">
 
-        <div style="width:1220px; display: flex; margin: 0 auto;">
+        <div style="width:1820px; display: flex; margin: 0 auto;">
 
             <div style="width: 406px; ">
                 <a style="color: white; font-size: 24px; font-weight: bold; text-decoration: none;" href="/workallocation">Manage Cases</a>
             </div>
 
-            <div class="hmcts-header__container" style="width: 812px;">
-
-                <div class="hmcts-header__logo">
-                    <a class="hmcts-header__link" href="/workallocation" aria-current="page"></a>
-                </div>
+            <div style="display: flex; flex-grow: 1;">
+            </div>
 
                 <div class="hmcts-header__content">
                     <nav class="hmcts-header__navigation" aria-label="Account navigation">
@@ -74,7 +75,7 @@
 
             </div>
 
-        </div>
+
 
 
     </header>
@@ -85,7 +86,7 @@
 
 
     <div  style="background-color: #0b0c0c;">
-        <div style="width:1220px; display: flex; margin: 0 auto; background-color: #0b0c0c;">
+        <div style="width:1820px; display: flex; margin: 0 auto; background-color: #0b0c0c;">
 
             <div style="width: 0px; ">
 
@@ -104,24 +105,21 @@
                                 All work
                             </a>
                         </li>
-                        <li class="hmcts-primary-navigation__item">
+                    <!--    <li class="hmcts-primary-navigation__item">
                             <a class="hmcts-primary-navigation__link" href="/workallocation/pages/search">
                                 Search cases
                             </a>
-                        </li>
+                        </li> -->
                     </ul>
                 </nav>
             </div>
-
             <div style="display: flex; flex-grow: 1;">
             </div>
-
-
-                <!--
-                <div style="width: 100px;">
-                    <a class="hmcts-search-toggle__button" href="">Find case</a>
-                </div>
-                -->
+            <div style="display: flex; flex-direction: row; ">
+                <p style="color: white; margin-top:12px; margin-bottom: 0px; "><a href="#" style="color: white; font-weight: bold;">Case list</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+            </div>
+            <a class="hmcts-search-toggle__button" href="#">Find case</a>
+<!--
 
             <div style="display: flex;flex-direction: row; ">
                 <p style="color: white; margin-top:8px; margin-bottom: 0px;">16-digit case reference:  &nbsp;</p>
@@ -131,8 +129,7 @@
                     Find
                 </a>
             </div>
-
-
+-->
         </div>
 
     </div>
