--- a/app/views/workallocation/layoutstaff.html
+++ b/app/views/workallocation/layoutstaff.html
@@ -105,11 +105,11 @@
                                 All work
                             </a>
                         </li>
-                    <!--    <li class="hmcts-primary-navigation__item">
-                            <a class="hmcts-primary-navigation__link" href="/workallocation/pages/search">
-                                Search cases
+                        <li class="hmcts-primary-navigation__item">
+                            <a class="hmcts-primary-navigation__link" href="#">
+                                Create case
                             </a>
-                        </li> -->
+                        </li>
                     </ul>
                 </nav>
             </div>
