updates for testing

--- a/app/views/caseaccess/pages/IAC-tr-case.html
+++ b/app/views/caseaccess/pages/IAC-tr-case.html
@@ -13,6 +13,7 @@ Case details
         <div class="govuk-grid-column-two-thirds">
           <h2 class="govuk-heading-l  govuk-!-margin-bottom-2">Review specific access request</h2>
           <p></p>
+          <h2 class="govuk-heading-m">Request details</h2>
           <table class="govuk-table">
             <tbody class="govuk-table__body">
               <tr class="govuk-table__row">
@@ -24,17 +25,31 @@ Case details
                 <td class="govuk-table__cell">PA/00467/2017</td>
               </tr>
               <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header" style="width: 220px;">Date submitted</th>
+                <td class="govuk-table__cell">13/04/2021</td>
+              </tr>
+              <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Request from</th>
                 <td class="govuk-table__cell">Arnold McKeever</td>
               </tr>
+
               <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Date submitted</th>
-                <td class="govuk-table__cell">29/03/2021</td>
+                <th scope="row" class="govuk-table__header" style="width: 220px;">Requester role and juristiction</th>
+                <td class="govuk-table__cell">To be added</td>
+              </tr>
+              <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header" style="width: 220px;">Any applicable case references</th>
+                <td class="govuk-table__cell">To be added</td>
+              </tr>
+
+              <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header" style="width: 220px;">Length of access</th>
+                <td class="govuk-table__cell">2 weeks</td>
               </tr>
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Reason for case access</th>
                 <td class="govuk-table__cell">
-	To view details of the other case linked to the parties/family on my current case.          </tr>
+	To be added          </tr>
             </tbody>
           </table>
         </div>
