--- a/app/views/caseaccess/pages/IAC-trr-case-bkup.html
+++ b/app/views/caseaccess/pages/IAC-trr-case-bkup.html
@@ -18,20 +18,43 @@ Case details
 {% endset -%}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-
-{{ govukTextarea({
-  name: "more-detail",
-  id: "more-detail",
-  label: {
-    text: "Reject specific access request",
-    classes: "govuk-label--l",
-    isPageHeading: true
+{{ govukRadios({
+  idPrefix: "contact",
+  name: "contact",
+  fieldset: {
+    legend: {
+      text: "Reject specific access request",
+      isPageHeading: true,
+      classes: "govuk-fieldset__legend--l"
+    }
   },
   hint: {
-    text: "This reason will be sent to the person requesting access to the case. Provide clear rational with as much supporting information as possible."
-  }
-}) }}
+    text: "Select one reason. This reason will be sent to the person requesting access to the case."
+  },
+  items: [
+  {
+    value: "email",
+    text: "Based on the reasons you have provided, I do not believe it is appropriate for you to gain access to this case"
+  },
+  {
+    value: "phone",
+    text: "You have not supplied enough information, please contact me to discuss further"
+  },
+  {
+    value: "email",
+    text: "You have a conflict of interest with this case"
+  },
 
+
+    {
+      value: "other",
+      text: "Other",
+      conditional: {
+        html: textHtml
+      }
+    }
+  ]
+}) }}
 <div class="govuk-button-group">
 {{ govukButton({
   text: "Submit",
