--- a/app/views/caseaccess/pages/IACs-tcrvd.html
+++ b/app/views/caseaccess/pages/IACs-tcrvd.html
@@ -16,47 +16,68 @@ Case details
           <h1 class="govuk-heading-l  govuk-!-margin-bottom-2"> Review your case access request and decision </h1>
         <!--    <h2 class="govuk-heading-m">Review your access request and decision</h2> -->
           <p class="govuk-body">Check the details of your case access request.</p>
+
+          <h2 class="govuk-heading-m">Request details</h2>
           <table class="govuk-table">
             <tbody class="govuk-table__body">
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Case name</th>
                 <td class="govuk-table__cell">Amelia Chu</td>
               </tr>
-<!--
               <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Role requested</th>
-                <td class="govuk-table__cell">(I think this this covered by Purpose)</td>
-              </tr> -->
+                <th scope="row" class="govuk-table__header" style="width: 220px;">Case reference</th>
+                <td class="govuk-table__cell">PA/00467/2017</td>
+              </tr>
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Date submitted</th>
-                <td class="govuk-table__cell">29/03/2021 </td>
+                <td class="govuk-table__cell">13/04/2021  </td>
               </tr>
+              <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header" style="width: 220px;">Your current role and juristiction</th>
+                <td class="govuk-table__cell">To be added</td>
+              </tr>
+              <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header" style="width: 220px;">Any applicable case references</th>
+                <td class="govuk-table__cell">To be added</td>
+              </tr>
+
+              <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header" style="width: 220px;">Length of access</th>
+                <td class="govuk-table__cell">2 weeks</td>
+              </tr>
+
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Reason for case access</th>
-                <td class="govuk-table__cell">To view details of the other case linked to the parties/family on my current case.</td>
+                <td class="govuk-table__cell">To be added</td>
               </tr>
+            </tbody>
+          </table>
+          <h2 class="govuk-heading-m">Rejection details</h2>
+          <table class="govuk-table">
+            <tbody class="govuk-table__body">
+
               <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Access decision</th>
-                <td class="govuk-table__cell">Rejected by Samuel Brown</td>
+                <th scope="row" class="govuk-table__header" style="width: 220px;">Request reviewed by</th>
+                <td class="govuk-table__cell">Samuel Brown<br>Case role or team details</td>
               </tr>
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Decision date</th>
-                <td class="govuk-table__cell">31/03/2021 </td>
+                <td class="govuk-table__cell">14/04/2021 </td>
               </tr>
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Reason for rejection</th>
                 <td class="govuk-table__cell">
-You have not supplied enough information, please contact me to discuss further.       </tr>
+You have not supplied enough information, please provide your role on the case, any related case reference numbers and more details on .... contact me to discuss further.       </tr>
             </tbody>
           </table>
         </div>
       </div>
-  <div class="govuk-button-group"><!--
+  <div class="govuk-button-group">
 {{ govukButton({
     text: "Request access again",
-    href: "/caseaccess/pages/PA-00467-2017",
+    href: "#",
     classes: "govuk-!-margin-right-3"
-  }) }}
+  }) }} <!--
  <p><a class="govuk-body" href="PA-00467-2017-tac">Cancel</a></p> -->
 
 
