--- a/app/views/caseaccess/pages/PA-00467-2017-request-bkup.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-request-bkup.html
@@ -1,3 +1,11 @@
+
+
+
+
+
+
+
+
 {% if  data.usertype == 'judiciary'   %}
     {% extends "../layoutjudicial.html" %}
 {% else %}
@@ -40,7 +48,7 @@ Case details
 
     {{ govukInput({
       label: {
-        html: 'Any applicable case references<span class="govuk-visually-hidden"></span>'
+        html: 'A current case reference (if applicable)<span class="govuk-visually-hidden"></span>'
       },
       classes: "govuk-!-width-two-thirds",
       id: "case ref",
@@ -55,7 +63,7 @@ Case details
   name: "sort",
   classes: "govuk-!-width-two-thirds",
   label: {
-    text: "Length of access"
+    text: "How long do you need access for"
   },
   hint: {
     text: ""
@@ -85,16 +93,13 @@ Case details
   name: "more-detail",
   id: "more-detail",
   label: {
-    text: "Reason for case access"
-  },
-  hint: {
-    text: "Provide clear rational with as much supporting information as possible."
+    text: "Provide clear reasons why you need access to this case."
   }
 }) }}
 
     {{ govukButton({
   text: "Submit",
-  href: "IACs-confirmation",
+  href: "PA-00467-2017-confirmation",
   classes: "govuk-!-margin-right-3"
 }) }}
 
@@ -104,7 +109,7 @@ Case details
   href: "results",
   classes: "govuk-button--secondary"
 }) }} -->
-<p>  <a class="govuk-body" href="/searchcases/pages/results">Cancel</a></p>
+<p>  <a class="govuk-body" href="results-s2">Cancel</a></p>
 </div>
 </div>
 <form method=""  action="#" class="for4" style=" float: left; margin-top: 60px;">
