--- a/app/views/caseaccess/pages/myaccess-IACs-gr-bkup.html
+++ b/app/views/caseaccess/pages/myaccess-IACs-gr-bkup.html
@@ -47,25 +47,25 @@ My work
         <table class="govuk-table ">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Jurisdiction</button></th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Date requested</button></th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Access</button></th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">End</button></th>
-                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: auto;" aria-sort="none"><a href="#"></a></th>
-                </tr>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Jurisdiction</button></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
+  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">Case role</button></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Access</button></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">End</button></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: 110px;" aria-sort="none"><a href="#"></a></th>
+              </tr>
             </thead>
             <tbody class="govuk-table__body">
               <tr class="govuk-table__row">
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="/caseaccess/pages/IACs-atc"><strong>Lorenzo Hanoi</strong></a></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Family Public Law</strong></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Protection</strong></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>14/04/2021</strong></td>
-                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Specific access</strong></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>14/04/2021 </strong></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>12/05/2021 </strong></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Reviewer</strong></td>
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Specific</strong></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>31/03/2021 </strong></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>06/04/2021 </strong></td>
                 <td class="govuk-table__cell"></td>
               </tr>
 
@@ -75,9 +75,9 @@ My work
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Amelia Chu</strong></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Immigration and Asylum</strong></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Protection</strong></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>13/04/2021</strong></td>
-                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Specific access</strong></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Access denied</strong></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Reviewer</strong></td>
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>No access</strong></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" >&nbsp;&nbsp;&nbsp;<a href="IACs-tcrvd" class="right_m">View</a></td>
 
