--- a/app/views/caseaccess/pages/myaccess-IACs-grr-bkup.html
+++ b/app/views/caseaccess/pages/myaccess-IACs-grr-bkup.html
@@ -37,8 +37,8 @@ My work
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" aria-current="page"  href="myaccess-IACs-gr">
-                My access <!-- <span class="xui-alert-link__number"> 1 </span> -->
+              <a class="hmcts-sub-navigation__link" aria-current="page"  href="#">
+                My access
               </a>
             </li>
           </ul>
@@ -50,7 +50,7 @@ My work
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Jurisdiction</button></th>
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Date requested</button></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case role</button></th>
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Access</button></th>
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">End</button></th>
@@ -58,28 +58,31 @@ My work
               </tr>
             </thead>
             <tbody class="govuk-table__body">
-
               <tr class="govuk-table__row">
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lorenzo Hanoi</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Family Public Law</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14/04/2021</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific access</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Pending</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-              <td class="govuk-table__cell"><!-- &nbsp;&nbsp;&nbsp;<a href="myaccess-po" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span>--></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="/caseaccess/pages/IACs-atc">Lorenzo Hanoi</a></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Family Public Law</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td>
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">31/03/2021 </td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">06/04/2021 </td>
+                <td class="govuk-table__cell"></td>
               </tr>
 
+
+
               <tr class="govuk-table__row">
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Amelia Chu</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">13/04/2021</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific access</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Pending</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-              <td class="govuk-table__cell"><!-- &nbsp;&nbsp;&nbsp;<a href="myaccess-po" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span>--></td>
-              </tr>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Amelia Chu</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td>
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">No access</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" >&nbsp;&nbsp;&nbsp;<a href="IACs-tcrvd" class="right_m">View</a></td>
+
+
+                  </tr>
 
               </tbody>
           </table>
