--- a/app/views/caseaccess/pages/myaccess-SSCSs-p.html
+++ b/app/views/caseaccess/pages/myaccess-SSCSs-p.html
@@ -47,16 +47,14 @@ My work
         <table class="govuk-table ">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Jurisdiction</button></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 140px;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
-                <!--  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none""></th> -->
-  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">Case role</button></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Access</button></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">End</button></th>
-                <!--     <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 130px;" aria-sort="none"><button type="button" data-index="1">Hearing date</button></th> -->
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: 110px;" aria-sort="none"><a href="#"></a></th>
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Jurisdiction</button></th>
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Date requested</button></th>
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Access</button></th>
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">End</button></th>
+                <th scop  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: auto;" aria-sort="none"><a href="#"></a></th>
               </tr>
             </thead>
             <tbody class="govuk-table__body">
@@ -64,8 +62,8 @@ My work
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Ali Uddin</td>
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific</td>
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14/04/202</td>
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific access</td>
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Pending</td>
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
               <td class="govuk-table__cell"><!-- &nbsp;&nbsp;&nbsp;<a href="myaccess-po" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span>--></td>
@@ -75,8 +73,8 @@ My work
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Amelia Chu</td>
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific</td>
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">13/04/2021</td>
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific access</td>
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Pending</td>
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
               <td class="govuk-table__cell"><!-- &nbsp;&nbsp;&nbsp;<a href="myaccess-po" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span>--></td>
