--- a/app/views/caseaccess/pages/myaccess-p-bkup.html
+++ b/app/views/caseaccess/pages/myaccess-p-bkup.html
@@ -32,52 +32,43 @@ My work
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link"  href="#">
+              <a class="hmcts-sub-navigation__link"  href="mycases-p">
                 My cases <!-- <span class="xui-alert-link__number"> 1 </span> -->
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" aria-current="page"  href="myaccess-IACs-gr">
+              <a class="hmcts-sub-navigation__link" aria-current="page"  href="myaccess-p">
                 My access <!-- <span class="xui-alert-link__number"> 1 </span> -->
               </a>
             </li>
           </ul>
         </nav>
-        <p class="govuk-body">Displaying <strong>2</strong> of <strong>2</strong> cases </p>
+        <p class="govuk-body">Displaying <strong>1</strong> of <strong>1</strong> cases </p>
         <table class="govuk-table ">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Jurisdiction</button></th>
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Date requested</button></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Access</button></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
+                <!--  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none""></th> -->
+  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Date requested</button></th>
+                 <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Access type</button></th>
+                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">End</button></th>
+                <!--     <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 130px;" aria-sort="none"><button type="button" data-index="1">Hearing date</button></th> -->
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: auto;" aria-sort="none"><a href="#"></a></th>
               </tr>
             </thead>
             <tbody class="govuk-table__body">
-
-              <tr class="govuk-table__row">
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lorenzo Hanoi</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Family Public Law</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14/04/2021</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific access</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Pending</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-              <td class="govuk-table__cell"><!-- &nbsp;&nbsp;&nbsp;<a href="myaccess-po" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span>--></td>
-              </tr>
-
               <tr class="govuk-table__row">
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Amelia Chu</td>
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">13/04/2021</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific access</td>
+            <!--  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Reviewer</td> -->
+
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific</td>
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Pending</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
               <td class="govuk-table__cell"><!-- &nbsp;&nbsp;&nbsp;<a href="myaccess-po" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span>--></td>
               </tr>
 
