--- a/app/views/caseaccess/pages/SSCSs-request.html
+++ b/app/views/caseaccess/pages/SSCSs-request.html
@@ -68,7 +68,7 @@ Case details
   },
     {
       value: "published",
-      text: "2 weeks"
+      text: "7 days"
     },
     {
       value: "updated",
